.metadata/.plugins/org.eclipse.cdt.ui/BlackBoardSess3.build.log
17:23:30 **** Incremental Build of configuration Debug for project BlackBoardSess3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Board.o" "..\\src\\Board.cpp" 
..\src\Board.cpp:11:9: warning: #pragma once in main file
 #pragma once
         ^~~~
In file included from ..\src\Board.h:12,
                 from ..\src\Board.cpp:8:
..\src\User.h:24:23: error: 'Board' has not been declared
     void writeOnBoard(Board*, string);
                       ^~~~~

17:23:31 Build Failed. 1 errors, 1 warnings. (took 608ms)

